test af deleteAttraction()